yaml-applications/prod/old-plannify/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: old-plannify
  namespace: plannify-2
spec:
  type: ClusterIP
  selector:
    app: old-plannify
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
